review: no persisted checkout credentials, and the documented command runs
Two CodeRabbit findings on #86, both correct and both mine.

1. SECURITY -- persisted checkout credentials (zizmor `artipacked`). On a
`pull_request`, checkout leaves the workflow token in the clone's git config,
and every job here runs `cargo`, which executes any `build.rs` the PR added --
a read path to the token before post-job cleanup.

Fixed on ALL THIRTEEN checkout steps, not the four the comment named. The other
nine were exposed identically; fixing a third of a uniform hole would have
guaranteed the same finding on the next PR that touched those jobs. Verified
free rather than assumed: no step in this file pushes, the workflow declares
`contents: read`, nothing reads a secret, and the sibling checkouts are public
reads -- so nothing needed a persisted credential. `persist-credentials` had
appeared NOWHERE in the file before this.

2. The documented suite command could not run. My own paragraph one screen up
says "a session that needs the current number runs the suite; the command is
written out below", and the command below selected JDK 25/26 without the
preview flags. Six types in java/src/main are `public value record`, so measured
it fails: `error: value classes are a preview feature and are disabled by
default`, exit 1.

Fixing it surfaced three more defects in the same block, each measured:

- `/usr/lib/jvm` now holds ONLY Java 21 -- `temurin-26-jdk-amd64` does not
  exist here at all, and `/opt/jdks` is down to `jdk-28+16` (26 and the 27
  Valhalla EA build are gone). So the reachability table's "verified on 25 AND
  26" is DATED EVIDENCE, not a description of this container; it is now labelled
  as such rather than re-pinned, the same treatment the 409-vs-612 drift got.
- The block mixed working directories: step 1 `cd`-ed into native/lgj-abi and
  step 2 then used root-relative paths, so running it top-to-bottom died on
  `find: 'java/src/main': No such file or directory`.
- `